--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ test:
 
 deployment:
   hub:
-    branch: xmaster
+    branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push roylines/nginx
