--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
   server {
     location = / {
       add_header Content-Type text/plain;
-      return 204;
+      return 200 "OK";
     }
   }
 }
